--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -55,9 +55,14 @@
                         <table class="table table-striped" id="calls-table">
                             <thead>
                                 <tr>
+                                    <th>Status</th>
                                     <th>Source</th>
                                     <th>Destination</th>
-                                    <th>Action URL</th>
+                                    <th>Destination Name</th>
+                                    <th>Prenom</th>
+                                    <th>Nom</th>
+                                    <th>Email</th>
+                                    <th>Note</th>
                                     <th>Action Text</th>
                                     <th></th>
                                 </tr>
