--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -9,13 +9,10 @@
             .mt10 {margin-top: 10px;}
             .mb10 {margin-bottom: 10px;}
         </style>
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
-
         <div class="container">
-
             <h2>CTI Connector - Action Links
                 <button id="disconnect" type="button" style="display: none;" class="btn btn-danger pull-right">
                     <span class="glyphicon glyphicon-log-out"></span> Disconnect
@@ -28,7 +25,6 @@
                         <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Answer
                     </button>
                 </p>
-
             </div>
 
             <div id="login-form" class="row">
@@ -37,9 +33,7 @@
                     <input id="password" type="password" name="password" class="form-control" placeholder="Password" />
                     <input id="connect-with-username-password" type="button" value="Connect" class="btn btn-success" />
                 </form>
-                
                 <p class="mt10 mb10">or</p>
-                
                 <form class="form-inline">
                     <input id="api_key" type="text" name="api_key" class="form-control" placeholder="User Id:API KEY" />
                     <input id="connect-with-api-key" type="button" value="Connect" class="btn btn-success" />
@@ -47,11 +41,9 @@
             </div>
 
             <div class="row" id="transfer-table" >
-
                 <div class="tab-content" id="transfer-tabs-content">
                     <div id="agents" class="tab-pane active" role="tabpanel">
                         <h4>Active calls</h4>
-
                         <table class="table table-striped" id="calls-table">
                             <thead>
                                 <tr>
@@ -96,6 +88,7 @@
         <script type="text/javascript" src="../sip.min.js"></script>
         <script type="text/javascript" src="../cti-connector.js"></script>
         <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" src="js/pos.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/action-links.js"></script>
     </body>
