--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -86,6 +86,7 @@
         </div>
 
         <script type="text/javascript" src="../sip.min.js"></script>
+        <script type="text/javascript" src="config.js"></script>
         <script type="text/javascript" src="../cti-connector.js"></script>
         <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="js/pos.js"></script>
