Display POS connection status.

--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -20,7 +20,15 @@
             </h2>
 
             <div class="row">
-                <p>Status: <span class="label label-default" id="status">Not connected</span>
+                <p>CTI: <span class="label label-default" id="cti-status">Not connected</span>
+                    <button id="call-answer" type="button" class="btn btn-success" style="display: none;">
+                        <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Answer
+                    </button>
+                </p>
+            </div>
+
+            <div class="row">
+                <p>POS: <span class="label label-default" id="pos-status">Not connected</span>
                     <button id="call-answer" type="button" class="btn btn-success" style="display: none;">
                         <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Answer
                     </button>
