Added customer link to POS page.

--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -63,6 +63,7 @@
                                     <th>Nom</th>
                                     <th>Email</th>
                                     <th>Note</th>
+                                    <th>POS</th>
                                     <th>Action Text</th>
                                     <th></th>
                                 </tr>
