--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -10,6 +10,7 @@
             .mb10 {margin-bottom: 10px;}
         </style>
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
