Display previous customer's sales.

--- a/examples/action-links.html
+++ b/examples/action-links.html
@@ -65,6 +65,7 @@
                                     <th>Nom</th>
                                     <th>Email</th>
                                     <th>Note</th>
+                                    <th>Ventes</th>
                                     <th>POS</th>
                                     <th>Update</th>
                                     <th></th>
@@ -109,6 +110,7 @@
         <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="js/pos.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="js/action-links.js"></script>
     </body>
 </html>
